--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <main class="container">
               
               <br>
-              <form class="form-horizontal" action="index.html#formulario" method="post" role="form" data-toggle="validator">
+              <form class="form-horizontal" action="./email.php" method="post" role="form" data-toggle="validator">
                   <div class="form-group">
                       <label class="control-label col-sm-3">Nome*:</label>
                       <div class="col-sm-9">
